# databytes

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  databytes_mypy_plugin.py  mypy.ini  pyproject.toml  setup.py  workbench.py
.github/workflows/: lint-and-tests.yml
databytes/: __init__.py  types.py  utils.py
src/: mypy_plugin.py
src/databytes/: __init__.py  types.py  utils.py
tests/: test_buffers.py  test_databytes.py  test_endianness.py  test_others.py  test_substruct.py
tests/types/: test_bool.py  test_char.py  test_float32.py  test_float64.py  test_int16.py  test_int32.py  test_int64.py  test_int8.py  test_string.py  test_uint16.py  test_uint32.py  test_uint64.py  test_uint8.py
tests/utils/: test_layout_info.py
